# best-of-n-flow-matching-world-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: final_audit.md  hostile_prior_work.md  literature_map.md  novelty_decision.md  related_work_matrix.csv
experiments/: run_gym_control.py  run_multiseed.py  run_step_sweep.py  run_synthetic.py
paper/: main.tex
paper/final/: best of n flow matching world models-v4-manifest.json
results/gym_control/: aggregate.json  effects.csv  metrics.csv
results/multiseed/: aggregate.csv  aggregate.json  summary.csv
results/multiseed/seed_0/: metrics.csv  run_config.json  summary.json  train_loss.csv
results/multiseed/seed_1/: metrics.csv  run_config.json  summary.json  train_loss.csv
results/multiseed/seed_2/: metrics.csv  run_config.json  summary.json  train_loss.csv
results/multiseed/seed_3/: metrics.csv  run_config.json  summary.json  train_loss.csv
results/multiseed/seed_4/: metrics.csv  run_config.json  summary.json  train_loss.csv
results/smoke/: metrics.csv  summary.json
results/step_sweep/: aggregate.json  config.json  metrics.csv
scripts/: build_literature_matrix.py  build_paper.py  run_claim_audit.py  run_smoke.py
src/flow_matching_bon/: __init__.py  config.py  diagnostics.py  metrics.py  model.py  plotting.py  samplers.py
src/flow_tail_audit/: __init__.py  config.py  data.py  diagnostics.py  gym_control.py  model.py  plotting.py  samplers.py
tests/: test_diagnostics.py  test_experiment_reproducibility.py  test_metrics.py  test_samplers.py
