[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-tail-audit"
version = "0.1.0"
description = "Synthetic tail-value diagnostics for rectified-flow trajectory world models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anonymous"}]
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "matplotlib>=3.7",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q"
